@@ -554,7 +554,7 @@ public class SubAnt extends Task {
         if (directory != null) {
             antTask.setDir(directory);
         } else {
-            antTask.setAllowNativeBasedir(true);
+            antTask.setUseNativeBasedir(true);
         }
 
         antTask.setInheritAll(inheritAll);
